документация скорректирована под использование нескольких файлов окружения

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,18 @@
 # Пример файла окружения для WorkCalendarClient
 #
-# Скопируйте этот файл в .env и заполните актуальные значения
-# для вашей среды развертывания.
+# Конфигурация разделена по средам:
+# - .env.development: настройки для локальной разработки (локальные API, отладочные флаги).
+# - .env.testing: параметры для тестового окружения (тестовые API, моки).
+# - .env.production: продакшен‑настройки (боевые API, оптимизированные флаги).
+#
+# Порядок настройки:
+# 1. Решите, для какой среды вы настраиваете приложение.
+# 2. Создайте копию этого файла с именем .env.<среда> (например, .env.production).
+# 3. Внесите в новый файл все необходимые значения переменных.
+# 4. В этом (или любом) файле убедитесь, что ENVIRONMENT соответствует выбранной среде.
+#
+# Примечание: приложение читает переменные из файла, имя которого совпадает с текущим значением ENVIRONMENT.
 
-# Окружение (обязательно)
-# Варианты: development, testing, production
-ENVIRONMENT=development
+# Окружение (обязательно к заполнению)
+# Укажите одну из допустимых сред
+ENVIRONMENT=development # допустимые: development, testing, production
