--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,18 @@
 # 4. В этом (или любом) файле убедитесь, что ENVIRONMENT соответствует выбранной среде.
 #
 # Примечание: приложение читает переменные из файла, имя которого совпадает с текущим значением ENVIRONMENT.
+
+# --- Данные ---
+# URL для подключения к базе данных в формате:
+# dialect+driver://username:password@host:port/database
+#
+# Параметры:
+# - dialect — СУБД (например, postgresql, mysql, sqlite, oracle, mssql)
+# - driver — используемый драйвер (например, psycopg2, pymysql, pysqlite)
+# - username — имя пользователя для аутентификации
+# - password — пароль пользователя (рекомендуется не хранить в открытом виде в конфиге)
+# - host — адрес сервера БД (localhost, IP или доменное имя)
+# - port — порт сервера БД (по умолчанию: 5432 для PostgreSQL, 3306 для MySQL и т. д.)
+# - database — название целевой базы данных
+DATABASE_URL=dialect+driver://username:password@host:port/database
+
