--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.17.2
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
@@ -10,6 +11,7 @@ fastapi==0.125.0
 fastapi-cli==0.0.16
 fastapi-cloud-cli==0.7.0
 fastar==0.8.0
+greenlet==3.3.0
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.7.1
@@ -17,12 +19,14 @@ httpx==0.28.1
 idna==3.11
 iniconfig==2.3.0
 Jinja2==3.1.6
+Mako==1.3.10
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
 packaging==25.0
 pluggy==1.6.0
 pydantic==2.12.5
+pydantic-settings==2.12.0
 pydantic_core==2.41.5
 Pygments==2.19.2
 pytest==9.0.2
@@ -34,6 +38,7 @@ rich-toolkit==0.17.1
 rignore==0.7.6
 sentry-sdk==2.48.0
 shellingham==1.5.4
+SQLAlchemy==2.0.45
 starlette==0.50.0
 typer==0.20.0
 typing-inspection==0.4.2
