подготовлен класс Logger

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,10 @@
 #
 # Примечание: приложение читает переменные из файла, имя которого совпадает с текущим значением ENVIRONMENT.
 
+# --- Среда ---
+# Если значение не задано, по умолчанию считается ENVIRONMENT=development
+ENVIRONMENT=development|testing|production
+
 # --- Данные ---
 # URL для подключения к базе данных в формате:
 # dialect+driver://username:password@host:port/database
@@ -27,3 +31,8 @@
 # - database — название целевой базы данных
 DATABASE_URL=dialect+driver://username:password@host:port/database
 
+ENCODING=utf-8
+
+LOG_DIR=path/to/log_dir
+LOG_MAX_BYTES=1000000
+LOG_BACKUP_COUNT=0|5|10
