добавлена папка templates и шаблон index.html

--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,14 @@
 #
 # Примечание: приложение читает переменные из файла, имя которого совпадает с текущим значением ENVIRONMENT.
 
-# --- Среда ---
-# Если значение не задано, по умолчанию считается ENVIRONMENT=development
+# --- Среда выполнения ---
+# Определяет текущую среду, в которой работает приложение.
+# Влияет на то, какие дополнительные настройки будут загружены.
+# Допустимые значения:
+#   - development — локальная разработка (включена отладка, логирование на максимум);
+#   - testing — тестовая среда (используются моки, тестовые API);
+#   - production — боевая среда (оптимизированная производительность, минимум логов).
+# Если значение не задано, по умолчанию используется "development".
 ENVIRONMENT=development|testing|production
 
 # --- Данные ---
@@ -31,8 +37,24 @@ ENVIRONMENT=development|testing|production
 # - database — название целевой базы данных
 DATABASE_URL=dialect+driver://username:password@host:port/database
 
+# --- Кодировка ---
+# Кодировка, используемая для взаимодействия с базой данных и обработки текстовых данных.
+# Рекомендуется использовать utf-8 для поддержки всех языков и символов.
 ENCODING=utf-8
 
+# --- Настройки логирования ---
+# Директория для хранения файлов логов приложения.
+# Путь может быть абсолютным или относительным (относительно корня проекта).
+# Пример: /var/log/workcalendar/ или ./logs/
 LOG_DIR=path/to/log_dir
+
+# Максимальный размер одного файла лога в байтах, после которого происходит ротация.
+# Значение по умолчанию: 1 000 000 байт (≈1 МБ).
+# При достижении лимита текущий файл закрывается, создаётся новый.
 LOG_MAX_BYTES=1000000
+
+# Количество резервных копий лог‑файлов, которые следует хранить.
+# При ротации старые файлы переименовываются (log.1, log.2 и т. д.).
+# Когда количество достигает указанного лимита, самый старый файл удаляется.
+# Допустимые значения: 0 (не хранить архивы), 5, 10 и т. д.
 LOG_BACKUP_COUNT=0|5|10
