настроено отображение index

--- a/.env.example
+++ b/.env.example
@@ -58,3 +58,16 @@ LOG_MAX_BYTES=1000000
 # Когда количество достигает указанного лимита, самый старый файл удаляется.
 # Допустимые значения: 0 (не хранить архивы), 5, 10 и т. д.
 LOG_BACKUP_COUNT=0|5|10
+
+# --- Директория шаблонов ---
+# Путь к директории, содержащей шаблоны (например, HTML, email‑шаблоны, отчёты).
+# Приложение будет искать шаблоны именно в этой папке.
+# Путь может быть:
+#   - абсолютным (начиная с корня файловой системы);
+#   - относительным (относительно корневой директории проекта).
+# Примеры:
+#   - /var/www/workcalendar/templates/
+#   - ./templates/
+#   - ../shared-templates/
+# Убедитесь, что указанная директория существует и доступна для чтения приложением.
+TEMPLATES_DIR=path/to/templates
