--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ alembic==1.17.2
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
+beautifulsoup4==4.14.3
 certifi==2025.11.12
+charset-normalizer==3.4.4
 click==8.3.1
 colorama==0.4.6
 dnspython==2.8.0
@@ -19,6 +21,7 @@ httpx==0.28.1
 idna==3.11
 iniconfig==2.3.0
 Jinja2==3.1.6
+lxml==6.0.2
 Mako==1.3.10
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
@@ -33,11 +36,13 @@ pytest==9.0.2
 python-dotenv==1.2.1
 python-multipart==0.0.21
 PyYAML==6.0.3
+requests==2.32.5
 rich==14.2.0
 rich-toolkit==0.17.1
 rignore==0.7.6
 sentry-sdk==2.48.0
 shellingham==1.5.4
+soupsieve==2.8.3
 SQLAlchemy==2.0.45
 starlette==0.50.0
 typer==0.20.0
